# accelhints

./: Cargo.toml  MANIFEST  README.md  st.sh
py/: accelhints.py  test_accelhints.py
src/: lib.rs
tests/: expected-rs.txt  expected.txt  input.txt  test1.rs  test2.rs
tests/data/: expected01.txt  expected02.txt  expected03.txt  expected04.txt  expected05.txt  expected06.txt  expected07.txt  expected08.txt  expected09.txt  expected10.txt  expected11.txt  expected12.txt  expected13.txt  expected15.txt  expected16.txt  expected17.txt  expected18.txt  expected19.txt  expected20.txt  expected21.txt  expected22.txt  expected23.txt  expected24.txt  expected26.txt  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  (+9 more)
